name: hscd
version: 0.0.1
category: Network
license: BSD3
license-file: LICENSE
author: Sebastián Ramírez Magrí
maintainer: Sebastián Ramírez Magrí <sebasmagri@gmail.com>
stability: experimental
build-type: Simple
cabal-version: >= 1.8
synopsis: A client and library for SoundCloud.com written in Haskell
description: A client and library for SoundCloud.com written in Haskell
executable hscd
           build-depends: aeson
                        , attoparsec
                        , base
                        , bytestring
                        , ghc-prim
                        , HTTP
                        , network
                        , text
           main-is: hscd.hs
           hs-source-dirs: src/
           ghc-options: -W -Wall
